connector-management v2
